Created main page

--- a/index.html
+++ b/index.html
@@ -4,16 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
+    <title>Portfolio Page</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Black</h1>
-    <h2 class="light-orange">Light Orange</h2>
-    <h3 class="darker-orange">Darker Orange</h3>
-    <h3 class="brick">Brick</h3>
-    <p>Some text here... </p>
+    <header>
+        <div class="wrapper">
+            <div class="typing-demo">
+                Hello there, this is me.
+            </div>
+            <div class="typing-demo">
+                Gülşah Genç.
+            </div>
+        </div>
+        <nav>
+          <ul>
+            <li><a class="nav-link" href="#about-me"><p>About Me</p></a></li>
+            <li><a class="nav-link" href="#my-work"><p>My Work</p></a></li>
+            <li><a class="nav-link" href="#contacts"><p>Contacts</p></a></li>
+          </ul>
+        </nav>
+    </header>
+    <section id="contents">
+        <div id= "about-me">
+            <h1 class="dark-orange">About Me</h1>
+            <p>I'm a 3rd year student in Computer Engineering in TED University, based in Turkey 💻 </p>
+            <p>Also a Front-End Web Developer Nanodegree Graduate in Udacity 🎓<br /> </p> 
+            <p>I'm currently focused on learning <span class="darker-orange">JavaScript</span> and <span class="darker-orange">React</span>.</p>
+        </div>
+        <div id= "my-work">
+        
+        </div>
+        <div id= "contacts">
+        </div>
+    </section>
+
+    
 </body>
 <script src="index.js"></script>
 </html>
