Changed the styling of section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="wrapper">
             <div class="typing-demo">
-                Hello there, this is me.
+                Hello World, here's me.
             </div>
             <div class="typing-demo">
                 Gülşah Genç.
@@ -31,7 +31,7 @@
             <h1 class="dark-orange">About Me</h1>
             <p>I'm a 3rd year student in Computer Engineering in TED University, based in Turkey 💻 </p>
             <p>Also a Front-End Web Developer Nanodegree Graduate in Udacity 🎓<br /> </p> 
-            <p>I'm currently focused on learning <span class="darker-orange">JavaScript</span> and <span class="darker-orange">React</span>.</p>
+            <p>I'm currently focused on learning <span class="brown">JavaScript</span> and <span class="brown">React</span>.</p>
         </div>
         <div id= "my-work">
         
