Added my work section

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Portfolio Page</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Judson:400,700" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="wrapper">
             <div class="typing-demo">
-                Hello World, here's me.
+                Hello World, here's me-
             </div>
             <div class="typing-demo">
                 Gülşah Genç.
@@ -34,7 +35,66 @@
             <p>I'm currently focused on learning <span class="brown">JavaScript</span> and <span class="brown">React</span>.</p>
         </div>
         <div id= "my-work">
-        
+            <div class="project first">
+                <div class="slide-img">
+                  <button class="prev">&#10094;</button>
+                  <img class="project-img" src="https://i.paste.pics/9XCMQ.png" alt="Mapbox Project Image">
+                  <button class="next">&#10095;</button>
+                </div>
+                <div class="project-description">
+                    <h2><a href="https://github.com/GulsahG/react-neighbourhood-project" target="_blank">Neighbourhood Project</a></h2>
+                    <p>This is a Neighbourhood Map Project for my Front-End Web Developer Nanodegree on Udacity. The goal of this project was to develop a sing
+                        le page application featuring a map of my neighbourhood.</p>
+                </div>
+            </div>
+            <div class="project">
+                <div class="slide-img">
+                  <button class="prev">&#10094;</button>
+                  <img class="project-img" src="https://i.paste.pics/9XDPI.png" alt="Memory Game Project Image">
+                  <button class="next">&#10095;</button>
+                </div>
+                <div class="project-description">
+                    <h2><a href="https://gulsahg.github.io/fend-memory-game/" target="_blank">Memory Game Project</a></h2>
+                    <p>This is a Memory Game Project for my Front-End Web Developer Nanodegree on Udacity. The goal of this project was to create a simple
+                        and interactive memory game. </p>
+                </div>
+            </div>
+            <div class="project">
+                <div class="slide-img">
+                  <button class="prev">&#10094;</button>
+                  <img class="project-img" src="https://i.paste.pics/9XDQL.png" alt="Arcade Game Project Image">
+                  <button class="next">&#10095;</button>
+                </div>
+                <div class="project-description">
+                    <h2><a href="https://gulsahg.github.io/fend-arcade-game/" target="_blank">Arcade Game Project</a></h2>
+                    <p>This is an Arcade Game Project for my Front-End Web Developer Nanodegree on Udacity. The goal of this project was to create a an arcade
+                        game where the user crosses the water without touching the obstacles on the way.</p>
+                </div>
+            </div>
+            <div class="project">
+                <div class="slide-img">
+                  <button class="prev">&#10094;</button>
+                  <img class="project-img" src="https://i.paste.pics/9XDSS.png" alt="Product Landing Page Image">
+                  <button class="next">&#10095;</button>
+                </div>
+                <div class="project-description">
+                    <h2><a href="https://codepen.io/GulsahG/full/GRoXgbg" target="_blank">Product Landing Page</a></h2>
+                    <p>This is a Product Landing Page I've built for freeCodeCamp's Responsive Web Design Projects. I've only used HTML and plain
+                        CSS to implement my personal style and ideas.</p>
+                </div>
+            </div>
+            <div class="project last">
+                <div class="slide-img">
+                  <button class="prev">&#10094;</button>
+                  <img class="project-img" src="https://i.paste.pics/9XDW4.png" alt="Playlist Project Image">
+                  <button class="next">&#10095;</button>
+                </div>
+                <div class="project-description">
+                    <h2><a href="https://codepen.io/GulsahG/full/BYNObE" target="_blank">Local Playlist Page</a></h2>
+                    <p>This is a playlist page I've built after following Wes Bos's tutorial on "LocalStorage and Event Delegation" in his course #JavaScript30.
+                        You can use the local storage implementation to store or remove song names on the page.</p>
+                </div>
+            </div>
         </div>
         <div id= "contacts">
         </div>
