Image sizes updated

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </div>
                 <div class="project-description">
                     <h2><a href="https://github.com/GulsahG/react-neighbourhood-project" target="_blank">Neighbourhood Project</a></h2>
-                    <p>This is a Neighbourhood Map Project for my Front-End Web Developer Nanodegree on Udacity. The goal of this project was to develop a sing
-                        le page application featuring a map of my neighbourhood.</p>
+                    <p>This is a Neighbourhood Map Project for my Front-End Web Developer Nanodegree on Udacity. The goal of this project was to develop 
+                        a single page application featuring a map of my neighbourhood.</p>
                 </div>
             </div>
             <div class="project">
