Changed text and centered icons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div id="wrapper">
             <div class="typing-demo">
-                Hello World, here's me-
+                Hello stranger, here's me-
             </div>
             <div class="typing-demo">
                 Gülşah Genç.
