--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 Hello stranger, here's me-
             </div>
             <div class="typing-demo">
-                Gülşah Genç.
+                Gulsah Genc.
             </div>
         </div>
         <nav>
