Changed typing animation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="typing-demo">
                 Hello stranger, here's me-
             </div>
-            <div class="typing-demo">
+            <div class="typing-demo secondLine">
                 Gulsah Genc.
             </div>
         </div>
