Fixed border of typewriter

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <header>
         <div id="wrapper">
-            <div class="typing-demo">
+            <div class="typing-demo first-line">
                 Hello stranger, here's me-
             </div>
-            <div class="typing-demo secondLine">
+            <div class="typing-demo second-line">
                 Gulsah Genc.
             </div>
         </div>
