Changed vw units to %

--- a/index.html
+++ b/index.html
@@ -181,5 +181,6 @@
     <button onClick='window.location="#wrapper"' class="scroll-up"></button>
 </body>
 <script src="index.js"></script>
-
+<script src="viewport-units-buggyfill.js"></script>
+<script>window.viewportUnitsBuggyfill.init();</script>
 </html>
