Script tags moved

--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
         </div>
     </section>
     <button onClick='window.location="#wrapper"' class="scroll-up"></button>
-    <button onClick='window.location="#wrapper"' class="scroll-up"></button>
+    <button onClick='window.location="#wrapper"' class="scroll-up"></button> 
+    <script defer src="index.js"></script>
+    <script defer src="viewport-units-buggyfill.js"></script>
+    <script>window.viewportUnitsBuggyfill.init();</script>
 </body>
-<script src="index.js"></script>
-<script src="viewport-units-buggyfill.js"></script>
-<script>window.viewportUnitsBuggyfill.init();</script>
 </html>
