--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <hr />
         <div id="my-work">
-            <div class="project first">
+            <div class="project first active">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
                     <img class="project-img" src="https://i.paste.pics/9Y6GV.png" alt="Mapbox Project Image">
@@ -61,7 +61,7 @@
                         a single page application featuring a map of my neighbourhood.</p>
                 </div>
             </div>
-            <div class="project">
+            <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
                     <img class="project-img" src="https://i.paste.pics/9XDPI.png" alt="Memory Game Project Image">
@@ -75,7 +75,7 @@
                         and interactive memory game. </p>
                 </div>
             </div>
-            <div class="project">
+            <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
                     <img class="project-img" src="https://i.paste.pics/9XDQL.png" alt="Arcade Game Project Image">
@@ -89,7 +89,7 @@
                         game where the user crosses the water without touching the obstacles on the way.</p>
                 </div>
             </div>
-            <div class="project">
+            <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
                     <img class="project-img" src="https://i.paste.pics/9XDSS.png" alt="Product Landing Page Image">
@@ -102,7 +102,7 @@
                         CSS to implement my personal style and ideas.</p>
                 </div>
             </div>
-            <div class="project last">
+            <div class="project last hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
                     <img class="project-img" src="https://i.paste.pics/9Y6F7.png" alt="Playlist Project Image">
