Image links changed to files

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="project first active">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="https://i.paste.pics/9Y6GV.png" alt="Mapbox Project Image">
+                    <img class="project-img" src="img/neighbourhood.png" alt="Mapbox Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -64,7 +64,7 @@
             <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="https://i.paste.pics/9XDPI.png" alt="Memory Game Project Image">
+                    <img class="project-img" src="img/memory.png" alt="Memory Game Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -78,7 +78,7 @@
             <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="https://i.paste.pics/9XDQL.png" alt="Arcade Game Project Image">
+                    <img class="project-img" src="img/arcade.png" alt="Arcade Game Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -92,7 +92,7 @@
             <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="https://i.paste.pics/9XDSS.png" alt="Product Landing Page Image">
+                    <img class="project-img" src="img/jadeBeauty.png" alt="Product Landing Page Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -105,7 +105,7 @@
             <div class="project last hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="https://i.paste.pics/9Y6F7.png" alt="Playlist Project Image">
+                    <img class="project-img" src="img/playlist.png" alt="Playlist Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
