Image fÄormats changed to webp

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
         <div id="about-me">
             <h1 class="dark-orange">Who am I?</h1>
             <p>I'm a 3rd year student in Computer Engineering in TED University, based in Turkey 💻 </p>
-            <p>Also a Front-End Web Developer Nanodegree Graduate in Udacity 🎓<br /> </p>
+            <p>Also a Front-End Web Developer Nanodegree Graduate in Udacity 🎓<br > </p>
             <p>I'm currently focused on improving my skills in <span class="brown">JavaScript</span> and <span
                     class="brown">React</span>.</p>
         </div>
-        <hr />
+        <hr >
         <div id="my-work">
             <div class="project first active">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="img/neighbourhood.png" alt="Mapbox Project Image">
+                    <img class="project-img" src="img/neighbourhood.webp" alt="Mapbox Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -65,7 +65,7 @@
             <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="img/memory.png" alt="Memory Game Project Image">
+                    <img class="project-img" src="img/memory.webp" alt="Memory Game Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -79,7 +79,7 @@
             <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="img/arcade.png" alt="Arcade Game Project Image">
+                    <img class="project-img" src="img/arcade.webp" alt="Arcade Game Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -93,7 +93,7 @@
             <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="img/jadeBeauty.png" alt="Product Landing Page Image">
+                    <img class="project-img" src="img/jadeBeauty.webp" alt="Product Landing Page Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -106,7 +106,7 @@
             <div class="project last hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="img/playlist.png" alt="Playlist Project Image">
+                    <img class="project-img" src="img/playlist.webp" alt="Playlist Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -120,7 +120,7 @@
         <div id="contacts">
             <h3>
                 Catch me on one of these platforms.
-                <br />
+                <br >
                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 470.004 470.004" style="enable-background:new 0 0 470.004 470.004;" xml:space="preserve">
                 <g>
