Script and link tags optimized

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="cache-control" content="max-age=31536000">
     <title>Portfolio Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet preload" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&family=Special+Elite&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Judson:400,700&display=swap" rel="stylesheet">
@@ -219,6 +219,6 @@
     </section>
     <button onClick='window.location="#wrapper"' class="scroll-up" aria-label="Scroll"></button>
     <button onClick='window.location="#wrapper"' class="scroll-up" aria-label="Scroll"></button> 
-    <script defer src="index.js"></script>
+    <script  type="text/javascript" src="index.js" defer></script>
 </body>
 </html>
