--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="project first active">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="img/neighbourhood.webp" alt="Mapbox Project Image">
+                    <img class="project-img" src="img/neighbourhood.webp" onerror="this.src='img/neighbourhood.png'" alt="Mapbox Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -65,7 +65,7 @@
             <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="img/memory.webp" alt="Memory Game Project Image">
+                    <img class="project-img" src="img/memory.webp" onerror="this.src='img/memory.png'" alt="Memory Game Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -79,7 +79,7 @@
             <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="img/arcade.webp" alt="Arcade Game Project Image">
+                    <img class="project-img" src="img/arcade.webp" onerror="this.src='img/arcade.png'" alt="Arcade Game Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -93,7 +93,7 @@
             <div class="project hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="img/jadeBeauty.webp" alt="Product Landing Page Image">
+                    <img class="project-img" src="img/jadeBeauty.webp" onerror="this.src='img/jadeBeauty.png'" alt="Product Landing Page Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
@@ -106,7 +106,7 @@
             <div class="project last hidden">
                 <div class="slide-img">
                     <button class="prev">&#10094;</button>
-                    <img class="project-img" src="img/playlist.webp" alt="Playlist Project Image">
+                    <img class="project-img" src="img/playlist.webp" onerror="this.src='img/playlist.png'" alt="Playlist Project Image">
                     <button class="next">&#10095;</button>
                 </div>
                 <div class="project-description">
